--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="input">
 	  	  <form id="input">
 			<label for="name"> Name: </label>
-			<input type="text" name="name" id="Name"/>
+			<input type="text" name="name" id="name"/>
 
 			<br><label for="strength"> Strength: </label>
 			<input type="text" name="strength" id="strength"/>
@@ -35,7 +35,7 @@
 			<br><label for="player"> Player Class (optional): </label>
 			<input type="text" name="player" id="player"/>
 		</div>
-		 	<button type="button" id="addMonster" onclick="addMonster(this);">Add Player/Monster to Records</button>
+		 	<button type="button" id="addMonster" onclick="addMonster()">Add Player/Monster to Records</button>
 		 </form>
 		<table id="table">
 		  <tr>
