--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			<br><label for="dexterity"> Dexterity: </label>
 			<input type="text" name="dexterity" id="dexterity"/>
 
-			<br><label for="constitution"> Constitution: <input type="text" name="constitution" id="constitution"/></label>
+			<br><label for="constitution"> Constitution: </label>
+			<input type="text" name="constitution" id="constitution"/>
 
 			<br><label for="wisdom"> Wisdom: </label>
 			<input type="text" name="wisdom" id="wisdom"/>
@@ -35,7 +36,7 @@
 			<br><label for="player"> Player Class (optional): </label>
 			<input type="text" name="player" id="player"/>
 		</div>
-		 	<button type="button" id="addMonster" onclick="addMonster()">Add Player/Monster to Records</button>
+		 	<button type="button" class ="btn" onclick="addMonster()">Add Player/Monster to Records</button>
 		 </form>
 		<table id="table">
 		  <tr>
